[package]
name = "rust-apios"
version = "0.1.0"
authors = ["pablopunk <pablovarela182@gmail.com>"]

[dependencies]
dotenv = "0.13.0"
rocket = "0.3.16"
rocket_codegen = "0.3.16"
bson = "0.13.0"
mongodb = "0.3.10"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
